fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,9 @@ html, body {
   object-fit: cover;
   margin-right: 10px;
 }
+
+.profile-list-box {
+  flex: 1 1 0;
+  min-height: 0; 
+  overflow-y: auto;
+}
